--- a/index.html
+++ b/index.html
@@ -8,25 +8,41 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="header">
-      <div class="w-title"><h1>Adrastea</h1></div>
-      <div class="w-button"><button>Sign Up/Sign in</button></div>
-      <div class="nav-icons">
-        <img class= "buy-icon" src="./images/icons/magnifying-glass.png" alt="searching">
-      </div>
-      <div class="nav-icons">
-          <img class="buy-icon" src="./images/icons/sale.png" alt="order">
-        </div>
+<nav class="nav">
+  <h1 class="main__title">Adrastrea</h1>
+  <h3 class="slogan">Luce elegante, luce genial</h3>
+</nav>
+
+<section class="catalog__section">
+
+  <div class="catalog__title">
+    <h2>Catálogo</h2>
+    <p>Escoge el código de tu producto y envialo por whatsapp</p>
   </div>
-  <div class="nav">
-     <div>
-         <li class="nav-list">
-             <a href="#">Categories</a>
-             <a href="#">Collections</a>
-             <a href="#">Gifts</a>
-             <a href="#">Sales</a>
-        </li>
-     </div>
-  </div>
+
+  <section class="jewelry__categories">
+
+    <div class="jewelry__containers">
+      <img class="image__styles" src="./images/Collares/petcollar.jpeg" alt="pet collar"> 
+    </div>
+
+    <div class="jewelry__containers">
+      <img class="image__styles" src="./images/Aretes/aretestipohoops.jpeg" alt="aretes">
+    </div>
+
+    <div class="jewelry__containers">
+     <img class="image__styles" src="./images/Anillos/heart ring.jpeg" alt="anillos"> 
+    </div>
+
+    <div class="jewerly__containers">
+      <img  class= "image__styles" src="./images/brazaletes/brazaletecover1.jpeg" alt="brazaletes">
+    </div>
+
+  </section>
+
+
+</section>
+<footer>
+  <h3>Adrastrea Joyería 2021 ® </h3>
+</footer>
 </body>
-</html>
