--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/icons/font.png" type="image/x-icon">
     <title>Adrastea</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -22,7 +23,7 @@
 
   <section class="jewelry__categories">
 
-    <div class="jewelry__containers">
+    <div class="jewelry__containers jewelry__category1">
       <img class="image__styles" src="./images/Collares/petcollar.jpeg" alt="pet collar"> 
     </div>
 
